2007-12-11  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(stamps/clone-ecj.stamp): Fixed to copy over openjdk dir instead of
	cloning again, or unzip sources specified.
	(stamps/patch-ecj.stamp): Only apply ecj patch, assuming all other
	patches have already been applied to the openjdk sources.
	* Makefile.in: Regenerate.

2007-12-11  Lillian Angel  <langel@redhat.com>

	* Makefile.am 
	(stamps/clone-ecj.stamp): Added -z to test, instead of -n.
	(stamps/clone.stamp): Likewise.
	* Makefile.in: Regenerate.

2007-12-11  Lillian Angel  <langel@redhat.com>
	
	* Makefile.am (stamps/clone-ecj.stamp): Fixed typo.
	* Makefile.in: Regenerate.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* INSTALL: Updated important targets section.
	* Makefile.am (dist-openjdk): Changed to create zip, not tarball.
	* Makefile.in: Regenerate.
	* configure.ac: Added check for zip and unzip tools
	* configure: Regenerate. 

2007-12-10  Lillian Angel  <langel@redhat.com>

	* INSTALL: Added note about new target dist-openjdk.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* configure.ac: Removed checks for unused tools.
	* configure: Regenerate.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am (dist-openjdk): New target to create openjdk zip.
	* Makefile.in: Regenerate.
	* configure.ac: Added check for tar tool.
	* configure: Regenerate.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed tag to use OPENJDK_VERSION var.
	* Makefile.in: Likewise.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added --with-openjdk-src-zip support back in. Also,
	openjdk is cloned based on release tag.
	* Makefile.in: Regenerate.
	* acinclude.m4: Added --with-openjdk-src-zip support back in.
	* configure: Regenerate.
	* configure.ac: Added --with-openjdk-src-zip support back in.

2007-12-10  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed update target to create stamp.
	* Makefile.in: Regenerate.
