@@ -1,3 +1,10 @@
+2007-12-12  Lillian Angel  <langel@redhat.com>
+
+	* Makefile.am
+	(stamps/clone-ecj.stamp): Removed extraction of openjdk sources. Now
+	only copies over openjdk dir.
+	* Makefile.in: Regenerate.
+
 2007-12-11  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am
